<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <Button
            style="@style/PortfolioButton"
            android:text="@string/button_movies"
            android:id="@+id/button"
            android:onClick="displayMoviesToast" />

        <Button
            style="@style/PortfolioButton"
            android:text="@string/button_scores"
            android:id="@+id/button2"
            android:onClick="displayScoresToast" />

        <Button
            style="@style/PortfolioButton"
            android:text="@string/button_library"
            android:id="@+id/button3"
            android:onClick="displayLibraryToast" />

        <Button
            style="@style/PortfolioButton"
            android:text="@string/button_build_bigger"
            android:id="@+id/button4"
            android:onClick="displayBuildBiggerToast" />

        <Button
            style="@style/PortfolioButton"
            android:text="@string/button_xyz_reader"
            android:id="@+id/button5"
            android:onClick="displayXYZReadeToast" />

        <Button
            style="@style/PortfolioButton"
            android:text="@string/button_capstone"
            android:id="@+id/button6"
            android:onClick="displayCapstoneToast" />
    </LinearLayout>
</RelativeLayout>
